gen/LinguaPyParser.py
# Generated from C:/Users/mesas/PycharmProjects/teoria_entrega1/LinguaPy.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LinguaPyParser ( Parser ):

    grammarFileName = "LinguaPy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'escribir'", "'('", "')'", 
                     "'si'", "'sino'", "'mientras'", "'{'", "'}'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'^'", "'>'", "'<'", "'>='", 
                     "'<='", "'=='", "'!='", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOLEANO", "ID", "ENTERO", "FLOTANTE", 
                      "CADENA", "DIGITO", "WS", "COMENTARIO_LINEA", "COMENTARIO_MULTILINEA" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_asignacion = 2
    RULE_escritura = 3
    RULE_condicion = 4
    RULE_ciclo = 5
    RULE_bloqueSi = 6
    RULE_bloqueSino = 7
    RULE_expresion = 8
    RULE_relacional = 9
    RULE_logica = 10
    RULE_entero = 11
    RULE_flotante = 12
    RULE_cadena = 13
    RULE_booleano = 14

    ruleNames =  [ "programa", "sentencia", "asignacion", "escritura", "condicion", 
                   "ciclo", "bloqueSi", "bloqueSino", "expresion", "relacional", 
                   "logica", "entero", "flotante", "cadena", "booleano" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    BOOLEANO=25
    ID=26
    ENTERO=27
    FLOTANTE=28
    CADENA=29
    DIGITO=30
    WS=31
    COMENTARIO_LINEA=32
    COMENTARIO_MULTILINEA=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LinguaPyParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaPyParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LinguaPyParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LinguaPyParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67109192) != 0):
                self.state = 30
                self.sentencia()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(LinguaPyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(LinguaPyParser.AsignacionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(LinguaPyParser.EscrituraContext,0)


        def condicion(self):
            return self.getTypedRuleContext(LinguaPyParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(LinguaPyParser.CicloContext,0)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = LinguaPyParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.asignacion()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.escritura()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.condicion()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.ciclo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LinguaPyParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(LinguaPyParser.ExpresionContext,0)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = LinguaPyParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(LinguaPyParser.ID)
            self.state = 45
            self.match(LinguaPyParser.T__0)
            self.state = 46
            self.expresion(0)
            self.state = 47
            self.match(LinguaPyParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(LinguaPyParser.ExpresionContext,0)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscritura" ):
                return visitor.visitEscritura(self)
            else:
                return visitor.visitChildren(self)




    def escritura(self):

        localctx = LinguaPyParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_escritura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(LinguaPyParser.T__2)
            self.state = 50
            self.match(LinguaPyParser.T__3)
            self.state = 51
            self.expresion(0)
            self.state = 52
            self.match(LinguaPyParser.T__4)
            self.state = 53
            self.match(LinguaPyParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(LinguaPyParser.ExpresionContext,0)


        def bloqueSi(self):
            return self.getTypedRuleContext(LinguaPyParser.BloqueSiContext,0)


        def bloqueSino(self):
            return self.getTypedRuleContext(LinguaPyParser.BloqueSinoContext,0)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicion" ):
                return visitor.visitCondicion(self)
            else:
                return visitor.visitChildren(self)




    def condicion(self):

        localctx = LinguaPyParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(LinguaPyParser.T__5)
            self.state = 56
            self.match(LinguaPyParser.T__3)
            self.state = 57
            self.expresion(0)
            self.state = 58
            self.match(LinguaPyParser.T__4)
            self.state = 59
            self.bloqueSi()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 60
                self.match(LinguaPyParser.T__6)
                self.state = 61
                self.bloqueSino()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(LinguaPyParser.ExpresionContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaPyParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LinguaPyParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCiclo" ):
                return visitor.visitCiclo(self)
            else:
                return visitor.visitChildren(self)




    def ciclo(self):

        localctx = LinguaPyParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ciclo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(LinguaPyParser.T__7)
            self.state = 65
            self.match(LinguaPyParser.T__3)
            self.state = 66
            self.expresion(0)
            self.state = 67
            self.match(LinguaPyParser.T__4)
            self.state = 68
            self.match(LinguaPyParser.T__8)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67109192) != 0):
                self.state = 69
                self.sentencia()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(LinguaPyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueSiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaPyParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LinguaPyParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_bloqueSi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloqueSi" ):
                listener.enterBloqueSi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloqueSi" ):
                listener.exitBloqueSi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloqueSi" ):
                return visitor.visitBloqueSi(self)
            else:
                return visitor.visitChildren(self)




    def bloqueSi(self):

        localctx = LinguaPyParser.BloqueSiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bloqueSi)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(LinguaPyParser.T__8)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67109192) != 0):
                self.state = 78
                self.sentencia()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(LinguaPyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueSinoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaPyParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LinguaPyParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_bloqueSino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloqueSino" ):
                listener.enterBloqueSino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloqueSino" ):
                listener.exitBloqueSino(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloqueSino" ):
                return visitor.visitBloqueSino(self)
            else:
                return visitor.visitChildren(self)




    def bloqueSino(self):

        localctx = LinguaPyParser.BloqueSinoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bloqueSino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(LinguaPyParser.T__8)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67109192) != 0):
                self.state = 87
                self.sentencia()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(LinguaPyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaPyParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(LinguaPyParser.ExpresionContext,i)


        def ID(self):
            return self.getToken(LinguaPyParser.ID, 0)

        def entero(self):
            return self.getTypedRuleContext(LinguaPyParser.EnteroContext,0)


        def flotante(self):
            return self.getTypedRuleContext(LinguaPyParser.FlotanteContext,0)


        def cadena(self):
            return self.getTypedRuleContext(LinguaPyParser.CadenaContext,0)


        def booleano(self):
            return self.getTypedRuleContext(LinguaPyParser.BooleanoContext,0)


        def relacional(self):
            return self.getTypedRuleContext(LinguaPyParser.RelacionalContext,0)


        def logica(self):
            return self.getTypedRuleContext(LinguaPyParser.LogicaContext,0)


        def getRuleIndex(self):
            return LinguaPyParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)



    def expresion(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LinguaPyParser.ExpresionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expresion, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.state = 96
                self.match(LinguaPyParser.T__3)
                self.state = 97
                self.expresion(0)
                self.state = 98
                self.match(LinguaPyParser.T__4)
                pass
            elif token in [15]:
                self.state = 100
                self.match(LinguaPyParser.T__14)
                self.state = 101
                self.expresion(8)
                pass
            elif token in [26]:
                self.state = 102
                self.match(LinguaPyParser.ID)
                pass
            elif token in [27]:
                self.state = 103
                self.entero()
                pass
            elif token in [28]:
                self.state = 104
                self.flotante()
                pass
            elif token in [29]:
                self.state = 105
                self.cadena()
                pass
            elif token in [25]:
                self.state = 106
                self.booleano()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 126
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = LinguaPyParser.ExpresionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 109
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 110
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14336) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 111
                        self.expresion(13)
                        pass

                    elif la_ == 2:
                        localctx = LinguaPyParser.ExpresionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 112
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 113
                        _la = self._input.LA(1)
                        if not(_la==14 or _la==15):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 114
                        self.expresion(12)
                        pass

                    elif la_ == 3:
                        localctx = LinguaPyParser.ExpresionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 115
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")

                        self.state = 116
                        self.match(LinguaPyParser.T__15)
                        self.state = 117
                        self.expresion(11)
                        pass

                    elif la_ == 4:
                        localctx = LinguaPyParser.ExpresionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 118
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 119
                        self.relacional()
                        self.state = 120
                        self.expresion(3)
                        pass

                    elif la_ == 5:
                        localctx = LinguaPyParser.ExpresionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 122
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 123
                        self.logica()
                        self.state = 124
                        self.expresion(2)
                        pass

             
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RelacionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LinguaPyParser.RULE_relacional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelacional" ):
                listener.enterRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelacional" ):
                listener.exitRelacional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelacional" ):
                return visitor.visitRelacional(self)
            else:
                return visitor.visitChildren(self)




    def relacional(self):

        localctx = LinguaPyParser.RelacionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_relacional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LinguaPyParser.RULE_logica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogica" ):
                listener.enterLogica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogica" ):
                listener.exitLogica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogica" ):
                return visitor.visitLogica(self)
            else:
                return visitor.visitChildren(self)




    def logica(self):

        localctx = LinguaPyParser.LogicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_logica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnteroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(LinguaPyParser.ENTERO, 0)

        def getRuleIndex(self):
            return LinguaPyParser.RULE_entero

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntero" ):
                listener.enterEntero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntero" ):
                listener.exitEntero(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntero" ):
                return visitor.visitEntero(self)
            else:
                return visitor.visitChildren(self)




    def entero(self):

        localctx = LinguaPyParser.EnteroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_entero)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(LinguaPyParser.ENTERO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlotanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOTANTE(self):
            return self.getToken(LinguaPyParser.FLOTANTE, 0)

        def getRuleIndex(self):
            return LinguaPyParser.RULE_flotante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlotante" ):
                listener.enterFlotante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlotante" ):
                listener.exitFlotante(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlotante" ):
                return visitor.visitFlotante(self)
            else:
                return visitor.visitChildren(self)




    def flotante(self):

        localctx = LinguaPyParser.FlotanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_flotante)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(LinguaPyParser.FLOTANTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CadenaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(LinguaPyParser.CADENA, 0)

        def getRuleIndex(self):
            return LinguaPyParser.RULE_cadena

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCadena" ):
                listener.enterCadena(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCadena" ):
                listener.exitCadena(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCadena" ):
                return visitor.visitCadena(self)
            else:
                return visitor.visitChildren(self)




    def cadena(self):
